refactor: replace F3NPermHelper Netty injection with Player#sendOpLevel
Agent-Logs-Url: https://github.com/CloudieSMP/CSystem/sessions/99a87ce5-df67-41b5-832b-c57f1923991a

Co-authored-by: Sebiann <32842507+Sebiann@users.noreply.github.com>